--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
     </svg>
     </a>
 
+    <a href="apply.html" aria-label="Candidature">
+    <svg fill="currentColor" viewBox="0 0 24 24" width="28" height="28">
+      <!-- Feuille -->
+      <rect x="3" y="3" width="14" height="18" rx="2" ry="2" stroke="currentColor" stroke-width="1.5" fill="none"/>
+      <line x1="6" y1="7" x2="14" y2="7" stroke="currentColor" stroke-width="1.5"/>
+      <line x1="6" y1="10" x2="14" y2="10" stroke="currentColor" stroke-width="1.5"/>
+      <line x1="6" y1="13" x2="11" y2="13" stroke="currentColor" stroke-width="1.5"/>
+
+      <!-- Crayon -->
+      <path d="M16.5 16.5 L20 13 C20.5 12.5 21.5 13.5 21 14 L17.5 17.5 C17.2 17.8 16.8 17.8 16.5 17.5 Z" fill="currentColor"/>
+      <line x1="16.5" y1="16.5" x2="17.5" y2="17.5" stroke="currentColor" stroke-width="1.5"/>
+      <circle cx="20.5" cy="12.5" r="0.5" fill="currentColor"/>
+    </svg>
+  </a>
+
+
 
 <script>
   const content = `Bienvenue chez Triad, vôtre agence artistique gratuite de confiance\nNous sommes là pour vous aider à crée du contenu, ou assurer vôtre liberté artistique, nos services passent également par la création de profile dans des organisations comme la SACEM.\nNôtre systeme complet d'agents et de contrats vous offres une opportunité infinie de vous démarquer, de vous développer et de vous crée une véritable identité au saint de l'industie du showbiz`;
